load("//macros:mobile_library.bzl", "mobile_library")

filegroup(
    name = "test-paths-impl",
    srcs = [
        "Source/Paths.cpp",
    ],
    visibility = ["//visibility:public"],
)

mobile_library(
    name = "test-paths",
    hdrs = [
        "Include/Paths.h",
    ],
    deps = select({
        "@platforms//os:android": [
            "//macros/android-helpers/exerunner/PathProvider",
        ],
        "@platforms//os:ios": [
            "//macros/ios-helpers:ios-bundle-path-provider",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)
