filegroup(
    name = "GoogleTestLauncherCppSources",
    srcs = [
        "cpp/GoogleTestLauncher.cpp",
    ],
    visibility = ["//visibility:public"],
)


filegroup(
    name = "GoogleTestLauncherJavaTemplateSources",
    srcs = [
        "java/GoogleTestLauncher.template.java",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "GoogleTestLauncherActivityTemplateSources",
    srcs = [
        "java/LaunchActivity.template.java",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "GoogleTestLauncherManifest",
    srcs = [
        "AndroidTestManifest.xml",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "GoogleTestLauncherResources",
    srcs = glob([
        "res/**",
    ]),
    visibility = ["//visibility:public"],
)
