filegroup(
    name = "GoogleTestLauncherCppSources",
    srcs = [
        "cpp/GoogleTestLauncher.cpp",
    ],
    visibility = ["//visibility:public"],
)


filegroup(
    name = "GoogleTestLauncherJavaSources",
    srcs = [
        "java/com/microblink/testrunner/LaunchActivity.java",
        "java/com/microblink/testrunner/GoogleTestLauncher.java",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "GoogleTestLauncherManifest",
    srcs = [
        "AndroidTestManifest.xml",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "GoogleTestLauncherResources",
    srcs = glob([
        "res/**",
    ]),
    visibility = ["//visibility:public"],
)
