filegroup(
    name = "GoogleTestLauncherCppSources",
    srcs = [
        "cpp/GoogleTestLauncher.cpp",
    ],
    visibility = ["//visibility:public"],
)


filegroup(
    name = "GoogleTestLauncherJavaSources",
    srcs = [
        "java/com/example/testrunner/LaunchActivity.java",
        "java/com/example/testrunner/GoogleTestLauncher.java",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "GoogleTestLauncherManifest",
    srcs = [
        "AndroidTestManifest.xml",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "GoogleTestLauncherResources",
    srcs = glob([
        "res/**",
    ]),
    visibility = ["//visibility:public"],
)
