load("@rules_swift//mixed_language:mixed_language_library.bzl", "mixed_language_library")
load("//macros/flags:flags.bzl", "resolved_flags_select_dicts")

mixed_language_library(
    name = "googletest-ios-swift-bridge",
    swift_srcs = [
        "GoogleTestLoader.swift",
    ],
    clang_srcs = [
        "GoogleTestInvoker.cpp",
    ],
    clang_copts = select(resolved_flags_select_dicts["copts"].flat_select_dict) + select(resolved_flags_select_dicts["cxxopts"].flat_select_dict),
    linkopts = select(resolved_flags_select_dicts["linkopts"].flat_select_dict),
    hdrs = [
        "GoogleTestInvoker.hpp",
    ],
    module_name = "GoogleTestSwift",
    swift_copts = [
        "-cxx-interoperability-mode=default",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//macros/ios-helpers:ios-bundle-path-provider",
        "@googletest//:gtest_main",
    ],
    testonly = True,
    tags = ["manual"],
    alwayslink = True,
)
